# llm-workflow

./: .gitignore  .ruff.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pip_freeze.txt  requirements.txt  setup.cfg  temp_notes.txt
.github/workflows/: tests.yaml
examples/: agents.ipynb  chains.ipynb  compare.html  compare.ipynb  conversation-between-models.ipynb  duckduckgo-web-search.ipynb  hugging_face_endpoints.ipynb  indexes.ipynb  memory.ipynb  notebook_helpers.py  openai_chat.ipynb  prompt_templates.ipynb  sandbox.ipynb  scraping-urls.ipynb  search-stack-overflow.ipynb  splitting-documents.ipynb  workflows.ipynb
llm_workflow/: agents.py  base.py  compare.py  exceptions.py  hugging_face.py  indexes.py  internal_utilities.py  links.py  llama_cpp_endpoint.py  memory.py  message_formatters.py  models.py  openai.py  prompt_templates.py  resources.py  tools.py  utilities.py
tests/: __init__.py  conftest.py  test_agents.py  test_base.py  test_chains.py  test_compare.py  test_history.py  test_hugging_face.py  test_indexes.py  test_links.py  test_llama_cpp_server.py  test_memory.py  test_message_formatters.py  test_models.py  test_openai.py  test_prompt_templates.py  test_records.py  test_session.py  test_utilities.py  test_workflows.py
tests/test_data/agents/: mock_tools.yml
tests/test_data/compare/: compare_models__2_models.html  compare_models__3_models.html  mock_conversation__mask_email_function.yml  mock_conversation__sum_function.yml
tests/test_data/prompt_templates/: test_PythonObjectMetadataTemplate__dataframe__credit__name.txt  (+8 more)
