[metadata]
name = llm-workflow
version = 0.0.19
author = Shane Kercheval
author_email = shane.kercheval@gmail.com
description = build LLM workflows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shane-kercheval/llm-workflow
project_urls =
    Bug Tracker = https://github.com/shane-kercheval/llm-workflow/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.10
install_requires =
    joblib
    openai
    pydantic
    tenacity
    transformers
    torch
    torchvision
    torchaudio
    tiktoken
